feat: add pid and user status
