# libs/api/user/data-access/src/lib/entity/user.entity.ts
@@ -3,12 +3,17 @@ import { ApiProperty } from '@nestjs/swagger'
 import { Identity } from '@pubkeyapp/api/identity/data-access'
 import { Follow } from './follow.entity'
 import { UserRole } from './user-role.enum'
+import { UserStatus } from './user-status.enum'
 
 @ObjectType()
 export class User {
   @ApiProperty()
   @Field({ nullable: true })
   id: string
+
+  @ApiProperty({ type: 'integer', nullable: true, required: false })
+  @Field(() => Int, { nullable: true })
+  pid: number
 
   @Field({ nullable: true })
   createdAt: string
@@ -20,7 +25,7 @@ export class User {
   @Field({ nullable: true })
   name: string
 
-  @ApiProperty()
+  @ApiProperty({ nullable: true, required: false })
   @Field({ nullable: true })
   username: string
   @ApiProperty()
@@ -31,35 +36,38 @@ export class User {
   @Field({ nullable: true })
   avatarUrl: string
 
-  @ApiProperty()
+  @ApiProperty({ nullable: true, required: false })
   @Field({ nullable: true })
   metaUrl: string
 
-  @ApiProperty()
+  @ApiProperty({ nullable: true, required: false })
   @Field({ nullable: true })
   profileUrl: string
 
-  @ApiProperty()
+  @ApiProperty({ nullable: true, required: false })
   @Field({ nullable: true })
   publicKey: string
 
-  @ApiProperty({ enum: UserRole, enumName: 'UserRole' })
+  @ApiProperty({ enum: UserRole, enumName: 'UserRole', nullable: true, required: false })
   @Field(() => UserRole, { nullable: true })
   role: UserRole
+  @ApiProperty({ enum: UserStatus, enumName: 'UserStatus', nullable: true, required: false })
+  @Field(() => UserStatus, { nullable: true })
+  status: UserStatus
   @HideField()
-  @ApiProperty({ type: [Identity] })
+  @ApiProperty({ type: [Identity], nullable: true, required: false })
   identities: Identity[]
 
   @Field(() => [Follow], { nullable: true })
   followers: Follow[]
-  @ApiProperty({ type: 'integer' })
+  @ApiProperty({ type: 'integer', nullable: true, required: false })
   @Field(() => Int, { nullable: true })
   followersCount: number
 
   @Field(() => [Follow], { nullable: true })
   following: Follow[]
 
-  @ApiProperty({ type: 'integer' })
+  @ApiProperty({ type: 'integer', nullable: true, required: false })
   @Field(() => Int, { nullable: true })
   followingCount: number
 }
